# gcc_make

./: 05.07.23.md  06.07.23.md  16.06.23.md  20.06.23.md  21.06.23.md  23.06.23.md  CMAKE.md  QEMU landing page.md  README.md  main.c  qemu.md  test.c  test.sh  Гепотиза.md  Пошаговая инструкция.md  Что нашел интересного.md  Что происходило.md  скрипт.md
.obsidian/: workspace.json
LD/: LD script.md
LD/ld_script/: main.c  scripts.ld
LD/testing/: main.c  script.lds
Sources/Docker/: CMakeLists.txt  Dockerfile  README.md
Sources/Docker/.devcontainer/: devcontainer.json
Sources/Docker/Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
Sources/Docker/Inc/: main.h
Sources/Docker/Release/: Makefile  MyApp.cbp
Sources/Docker/Src/: binTree.c  main.c
Sources/LD/: LD script.md
Sources/LD/test/: script.lds
Sources/Preprocessing/: CmakeLists.txt  README.md  help.bat  lib.c  lib.h  lib2.c  lib2.h  main.c  test.bat  test.c
Sources/Preprocessing/Debug/: CMakeCache.txt  Makefile  MyApp.cbp  cmake_install.cmake
Sources/Preprocessing/Inc/: binTree.h
Sources/Preprocessing/Release/: CMakeCache.txt  cmake_install.cmake
Sources/asdqwecvx/.metadata/: version.ini
Sources/asdqwecvx/.metadata/.plugins/org.eclipse.cdt.core/: prj_ght_vent_3.language.settings.xml  ws2812b.language.settings.xml
Sources/asdqwecvx/.metadata/.plugins/org.eclipse.core.resources/.root/: 14.tree
Sources/asdqwecvx/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
Sources/asdqwecvx/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
Sources/asdqwecvx/.metadata/.plugins/org.eclipse.equinox.p2.ui/: dialog_settings.xml
Sources/asdqwecvx/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
Sources/asdqwecvx/.metadata/.plugins/org.eclipse.ui.workbench.texteditor/: dialog_settings.xml
Sources/asdqwecvx/123/.metadata/: .log4j2.xml  version.ini
Sources/asdqwecvx/123/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
Sources/asdqwecvx/123/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
Sources/asdqwecvx/123/1/.metadata/: .log4j2.xml  version.ini
Sources/asdqwecvx/qqqq/.metadata/: .log4j2.xml  version.ini
Sources/asdqwecvx/qqqq/.metadata/.plugins/org.eclipse.cdt.core/: ws2812b.language.settings.xml
Sources/asdqwecvx/qqqq/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
Sources/asdqwecvx/qqqq/.metadata/.plugins/org.eclipse.equinox.p2.ui/: dialog_settings.xml
Sources/asdqwecvx/qqqq/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
Sources/asdqwecvx/www/.metadata/: .log4j2.xml  version.ini
Sources/asdqwecvx/www/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
Sources/asdqwecvx/www/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
Sources/asdqwecvx/www/.metadata/.plugins/org.eclipse.ui.workbench.texteditor/: dialog_settings.xml
Sources/asdqwecvx/www/qqqqqqqqqqqqqqqqqqqqqqq/.metadata/: .log4j2.xml  version.ini
Sources/debug/: .mxproject  Dependencies.md  Dockerfile  Makefile  README.md  asdqwecvx.ioc  gdb_run.bat  gdb_run.sh  startup_stm32g474xx.s  test.txt
Sources/debug/.devcontainer/: devcontainer.json
Sources/debug/.metadata/: .log4j2.xml  version.ini
Sources/debug/.metadata/.plugins/org.eclipse.core.resources/.root/: 1.tree
Sources/debug/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
Sources/debug/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
Sources/debug/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
Sources/debug/Core/Inc/: main.h
Sources/debug/Core/Src/: main.c
Sources/debug/Scripts/: gdb_run.bat  test.txt  wsl_run.bat
Sources/proj_cmake/: CmakeLists.txt  README.md  main.c  test.bat  Какие могут быть ошибки.md
Sources/proj_cmake/Debug/: CMakeCache.txt  Makefile  MyApp.cbp  cmake_install.cmake
Sources/proj_cmake/Inc/: test.h
Sources/proj_cmake/Release/: CMakeCache.txt  MyApp.cbp
Sources/proj_cmake/Src/: test.c
Sources/renode_test/: .cproject  .mxproject  .project  CMakeLists.txt  Makefile  log.html  renode_test.ioc  report.html  results-test.robot.xml  robot_output.xml  stm32_proj.resc  stm32f4.repl  test.robot  toolchain.cmake
Sources/renode_test/Core/Src/: main.c
Sources/tests/: 1.1  CMakeLists.txt  Dockerfile  toolchain.cmake
Sources/tests/src/: main.c  test_list.c
Sources/tests/tests/: hello_test.cpp
Toolchain_settings/Cmake_ninja/: README.md
Toolchain_settings/VS_Code_SetUp_Doc/: VS_Code_SetUp.code-workspace  c_cpp_properties.md  tasks.md
VS_Code_SetUp/: c_cpp_properties.md  settings.md  tasks.md
compile_and_link/: main.c
compile_and_link/Inc/: test.h
emulations/UART_JOB/test/: cmake_install.cmake
emulations/qemu/: QEMU commands.md  QEMU functional.md  QEMU landing page.md  qemu_commands.md
emulations/qemu/UART_JOB/: Makefile  UART_JOB.ioc
emulations/qemu/UART_JOB/Core/Inc/: UART.h
emulations/qemu/UART_JOB/Core/Src/: main.c
emulations/qemu/UART_JOB/test/: main_prj.elf
emulations/renode/: RENODE.md  Renode commands.md  Renode functional.md  Renode landing page.md  renode_commands.md
emulations/renode/UART_JOB/: .mxproject  CMakeLists.txt  Makefile  UART_JOB.ioc  stm32_proj.resc  stm_eeprom.json  toolchain.cmake  transmit.resc
emulations/renode/UART_JOB/Core/Inc/: main.h
emulations/renode/UART_JOB/Core/Src/: UART.c  main.c  stm32f4xx_hal_msp.c
emulations/renode/UART_JOB/test/: CMakeCache.txt
ld_script/: main.c  scripts.ld
proj_cmake/: CMakeCache.txt  CMakeLists.txt  README.md  main.c  test.bat
proj_cmake/Debug/: CMakeCache.txt  MyApp.cbp  cmake_install.cmake
proj_cmake/Inc/: test.h
proj_cmake/Release/: CMakeCache.txt  Makefile  cmake_install.cmake
proj_cmake/Src/: test.c
qemu/UART_JOB/: .mxproject  CMakeLists.txt  Makefile  UART_JOB.ioc  toolchain.cmake
qemu/UART_JOB/Core/Inc/: main.h
qemu/UART_JOB/Core/Src/: main.c
qemu/UART_JOB/Drivers/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_hal.h
qemu/UART_JOB/test/: CMakeCache.txt  Makefile
results/: log.html  output.xml  report.html
(+49 files in other folders)
